# LLM_Wiki_SecondBrain

./: .gitignore  CLAUDE.md  LICENSE  README.md  awake_mac.py  pyproject.toml
db/: .gitkeep
docs/: UI.md
docs/arc42/: 01-introduction-and-goals.md  02-architecture-constraints.md  03-system-scope-and-context.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  08-crosscutting-concepts.md  09-architecture-decisions.md  10-quality-requirements.md  11-risks-and-technical-debt.md  12-glossary.md  README.md  appendix-a-academic-retrospective.md
docs/c4/: L1-system-context.md  L2-container.md  L3-component.md
models/: .gitkeep
obsidian_vault/raw/: .gitkeep
obsidian_vault/raw/assets/: .gitkeep
obsidian_vault/wiki/: index.md  log.md
obsidian_vault/wiki/concepts/: .gitkeep
obsidian_vault/wiki/entities/: .gitkeep
obsidian_vault/wiki/sources/: .gitkeep
obsidian_vault/wiki/synthesis/: .gitkeep
scripts/: aliases.py  cleanup_dedup.py  ingest.py  lint.py  llm_client.py  query.py  resolver.py  search.py  start_embed_server.sh  start_server.sh  test_aliases.py  test_ingest_dedup.py  test_resolver.py  test_resolver_scenarios.py  watch.sh
scripts/data/: seed_aliases.json
web/api/: app.py  models.py  services.py
web/api/routers/: admin.py  dedup.py  ingest.py  lint.py  query.py  search.py  server.py  wiki.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: main.js
web/frontend/src/components/: app-shell.js  dedup-panel.js  graph-view.js  ingest-panel.js  lint-panel.js  (+5 more)
(+6 files in other folders)
